unpackaged/main/default/objects/Coupon_Seller__c/fields/Invoice_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Send_Date__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <label>Invoice Send Date</label>
    <type>DateTime</type>
</CustomField>