unpackaged/main/default/objects/Coupon_Seller__c/fields/Invoice_Send_Date_Z__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Send_Date_Z__c</fullName>
    <description>EPH-7406 Object Couopon Seller - Invoice fields FLS to Read Only</description>
    <formula>null</formula>
    <label>Invoice Send Date</label>
    <type>DateTime</type>
</CustomField>