unpackaged/main/default/objects/Coupon_Seller__c/fields/Is_Coupon_Stage_Nego_Running__c.field-meta.xml
<CustomField>
    <fullName>Is_Coupon_Stage_Nego_Running__c</fullName>
    <description>US-0011998 - Business Feedback Focus 75 AC3</description>
    <formula>IF(OR(ISPICKVAL(Coupon__r.Stage__c, &#39;Seller Negotiation&#39;), ISPICKVAL(Coupon__r.Stage__c, &#39;Coupon Running&#39;)), true, false)</formula>
    <label>Is Coupon Stage Nego Running</label>
    <type>Checkbox</type>
</CustomField>