unpackaged/main/default/objects/Coupon_Seller__c/fields/Legal_Entity_City__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_City__c</fullName>
    <description>US-0010003 - Coupon seller: create new field Legal Entity City</description>
    <inlineHelpText>Sellers eBay registration data</inlineHelpText>
    <label>Legal Entity City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>