unpackaged/main/default/objects/Coupon_Seller__c/fields/Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Country__c</fullName>
    <description>US-0010429 - Ability to sign Agreement in portal</description>
    <label>Legal Entity Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>