unpackaged/main/default/objects/Coupon_Seller__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>HYPERLINK(&quot;&quot; &amp; Seller__r.ParentId &amp; &quot;&quot;, Seller__r.Parent.Name)</formula>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>