unpackaged/main/default/objects/Coupon_Seller__c/fields/Legal_Entity_Zip__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Zip__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>Seller__r.Parent.EBH_BillingPostalCode__c</formula>
    <label>Legal Entity Zip</label>
    <type>Text</type>
</CustomField>