unpackaged/main/default/objects/Coupon_Seller__c/fields/Legal_Entity_Zip_w__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Zip_w__c</fullName>
    <description>EPH-7583 Change logic for contactdatafields in coupon seller</description>
    <inlineHelpText>Sellers eBay registration data</inlineHelpText>
    <label>Legal Entity Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>