unpackaged/main/default/objects/Coupon_Seller__c/fields/Marketing_Coupon_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Coupon_Name__c</fullName>
    <description>US-0007064 [AU] Coupon Click Contract Template Amends</description>
    <formula>Coupon__r.Marketing_Coupon_Name__c</formula>
    <label>Marketing Coupon Name</label>
    <type>Text</type>
</CustomField>