unpackaged/main/default/objects/Coupon_Seller__c/fields/Max_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Max_Redemptions__c</fullName>
    <description>US-0010429 - Ability to sign Agreement in portal
US-0011917</description>
    <formula>Coupon__r.Max_Redemptions__c</formula>
    <label>Maximum Redemption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>