unpackaged/main/default/objects/Coupon_Seller__c/fields/Maximum_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount_Value__c</fullName>
    <description>US-0010429 - Ability to sign Agreement in portal</description>
    <formula>Coupon__r.Coupon_Cap__c</formula>
    <label>Maximum Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>