unpackaged/main/default/objects/Coupon_Seller__c/fields/MC_Whitelisted__c.field-meta.xml
<CustomField>
    <fullName>MC_Whitelisted__c</fullName>
    <description>US-0009891 - Create new fields on Coupon and Coupon-Seller required for MC Coupon Flow</description>
    <formula>Coupon__r.MC_Whitelisted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When checked that the coupon will be whitelisted for the Marketing Cloud flow for sending emails to sellers. Otherwise the communication will be sent using the proprietary email templates/flows from Salesforce. This setting is set on the Coupon record.</inlineHelpText>
    <label>MC Whitelisted</label>
    <type>Checkbox</type>
</CustomField>