unpackaged/main/default/objects/Coupon_Seller__c/fields/Min_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Transaction_Value__c</fullName>
    <description>US-0010429 - Ability to sign Agreement in portal</description>
    <formula>Coupon__r.Minimum_Transaction_Value__c</formula>
    <label>Minimum Transaction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>