unpackaged/main/default/objects/Coupon_Seller__c/fields/Monthly_Cofund_Cap__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cofund_Cap__c</fullName>
    <description>US-0007260 POP COUPON - NEW RECORD TYPE COUPON SELLER OBJECT</description>
    <label>Monthly Cofund Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>