unpackaged/main/default/objects/Coupon_Seller__c/fields/Negotiation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_End_Date__c</fullName>
    <formula>Coupon__r.Negotiation_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negotiation End Date</label>
    <type>DateTime</type>
</CustomField>