unpackaged/main/default/objects/Coupon_Seller__c/fields/Non_Payout_Sold_Items__c.field-meta.xml
<CustomField>
    <fullName>Non_Payout_Sold_Items__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <inlineHelpText>Retunred Items, Cancelled Trxns etc..</inlineHelpText>
    <label>Sold Items (Non-Payout)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>