unpackaged/main/default/objects/Coupon_Seller__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>Seller__r.EBH_OracleID__c</formula>
    <label>Oracle ID</label>
    <type>Text</type>
</CustomField>