unpackaged/main/default/objects/Coupon_Seller__c/fields/Outreach_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0015696 [AU] &quot;Coupon Promotion Preferences&quot; to be updated in Coupon Seller</description>
    <label>Outreach Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coupon_Sellers1</relationshipName>
    <type>Lookup</type>
</CustomField>