unpackaged/main/default/objects/Coupon_Seller__c/fields/Payout_Sold_Items__c.field-meta.xml
<CustomField>
    <fullName>Payout_Sold_Items__c</fullName>
    <description>US-0018835 Correct Invoice fields on Coupon Seller</description>
    <label>Sold Items (Payout)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>