unpackaged/main/default/objects/Coupon_Seller__c/fields/PayPal_adress__c.field-meta.xml
<CustomField>
    <fullName>PayPal_adress__c</fullName>
    <description>EPH-7157 Object: Coupon Seller
	DEPRECIATED USE THE NEW FIELD INSTEAD</description>
    <inlineHelpText>PayPal Adress provided by Seller</inlineHelpText>
    <label>PayPal adress</label>
    <type>Email</type>
</CustomField>