unpackaged/main/default/objects/Coupon_Seller__c/fields/PayPal_adress_N__c.field-meta.xml
<CustomField>
    <fullName>PayPal_adress_N__c</fullName>
    <description>EPH-7405 Object Coupon seller: Change Fieldtype for field PayPal Adress</description>
    <formula>Seller__r.PayPal_adress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PayPal adress</label>
    <type>Text</type>
</CustomField>