unpackaged/main/default/objects/Coupon_Seller__c/fields/Pitch_Records_Available__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Records_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-0007262 : POP COUPON - Coupon Seller - Stage Validation</description>
    <label>Pitch Records Available</label>
    <type>Checkbox</type>
</CustomField>