unpackaged/main/default/objects/Coupon_Seller__c/fields/Promotions_T_Cs_agreed__c.field-meta.xml
<CustomField>
    <fullName>Promotions_T_Cs_agreed__c</fullName>
    <description>EPH-7157 Object: Coupon Seller</description>
    <formula>TEXT(Seller__r.EBH_DealsProgram__c)</formula>
    <label>Promotions T&amp;Cs agreed</label>
    <type>Text</type>
</CustomField>