unpackaged/main/default/objects/Coupon_Seller__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EPH-6086] have coupon details in Hive</description>
    <label>Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupon_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>