unpackaged/main/default/objects/Coupon_Seller__c/fields/Seller_Co_funding_Share_forecast__c.field-meta.xml
<CustomField>
    <fullName>Seller_Co_funding_Share_forecast__c</fullName>
    <formula>Coupon__r.Seller_Co_funding_share_forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Co-funding Share (forecast)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>