unpackaged/main/default/objects/Coupon_Seller__c/fields/Seller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Seller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0009891 - Create new fields on Coupon and Coupon-Seller required for MC Coupon Flow.
US-0011981</description>
    <inlineHelpText>Seller Contact to be user for the email communication.</inlineHelpText>
    <label>Seller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coupon Sellers</relationshipLabel>
    <relationshipName>Coupon_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>