unpackaged/main/default/objects/Coupon_Seller__c/fields/Seller_Declined_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Seller_Declined_Reasons__c</fullName>
    <description>[#EPH-7254]Object: Coupon Seller - New field Seller Declined Reason</description>
    <label>Seller Declined Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Challenges (Logistics, holiday etc.)</fullName>
            </value>
            <value>
                <fullName>Only item based feasible, not category based</fullName>
            </value>
            <value>
                <fullName>Only category based feasible, not item based</fullName>
            </value>
            <value>
                <fullName>No interest in general - focus on In-the-River and/or Deals</fullName>
            </value>
            <value>
                <fullName>Does not want to have any promotion on current account</fullName>
            </value>
            <value>
                <fullName>Participation only with other related account</fullName>
            </value>
            <value>
                <fullName>No appropriate Inventory available</fullName>
            </value>
            <value>
                <fullName>Too many coupons in a little while</fullName>
            </value>
            <value>
                <fullName>Cannot agree on share split</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Seller did not respond</fullName>
            </value>
            <value>
                <fullName>Contract Breach</fullName>
            </value>
            <value>
                <fullName>Contract Voided</fullName>
            </value>
            <value>
                <fullName>Seller not reached</fullName>
            </value>
            <value>
                <fullName>Seller added to coupon by mistake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>