unpackaged/main/default/objects/Coupon_Seller__c/fields/Seller_Funded__c.field-meta.xml
<CustomField>
    <fullName>Seller_Funded__c</fullName>
    <description>US-0011958 - Change Requests Focus 75</description>
    <formula>IF((SellerShareHolder__c*100 = 100), $Label.Seller_Funded_Yes, IF((SellerShareHolder__c*100 &lt; 100), $Label.Seller_Funded_Yes_Partially ,&#39;&#39;))</formula>
    <label>Seller Funded</label>
    <type>Text</type>
</CustomField>