unpackaged/main/default/objects/Coupon_Seller__c/fields/SellerShareHolder__c.field-meta.xml
<CustomField>
    <fullName>SellerShareHolder__c</fullName>
    <description>US-0007138 Coupon Seller: Give a possibility to upload Coupon Items &amp; share in right format
Hold field to stored value from csv before for transfering to co-invest</description>
    <label>SellerShareHolder</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>