unpackaged/main/default/objects/Coupon_Seller__c/fields/SEP_whitelisted__c.field-meta.xml
<CustomField>
    <fullName>SEP_whitelisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010401 - Create new field on Coupon-Seller required for SEP</description>
    <label>SEP whitelisted</label>
    <type>Checkbox</type>
</CustomField>