unpackaged/main/default/objects/Coupon_Seller__c/fields/SiteURL__c.field-meta.xml
<CustomField>
    <fullName>SiteURL__c</fullName>
    <description>US-0008290 : Wrong URL for Coupon Agreement</description>
    <label>SiteURL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>