unpackaged/main/default/objects/Coupon_Seller__c/fields/SP_Coupon_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>SP_Coupon_Discount_Rate__c</fullName>
    <description>US-0010429 - Ability to sign Agreement in portal</description>
    <formula>Coupon__r.Coupon_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Discount (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>