unpackaged/main/default/objects/Coupon_Seller__c/fields/TriggerEmailManhattan__c.field-meta.xml
<CustomField>
    <fullName>TriggerEmailManhattan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-7565 Coupon - Manhattan Invoice Statment send to coupon seller</description>
    <label>TriggerEmailManhattan</label>
    <type>Checkbox</type>
</CustomField>