unpackaged/main/default/objects/Coupon_Seller__c/fields/TriggerStageUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>TriggerStageUpdatedDate__c</fullName>
    <description>to avoid error on Coupon Seller trigger blockManualSetStage</description>
    <label>TriggerStageUpdatedDate</label>
    <type>DateTime</type>
</CustomField>