unpackaged/main/default/objects/Coupon_Seller__c/fields/UK_Coupon_Launch_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>UK_Coupon_Launch_Reminder_Date__c</fullName>
    <description>US-0007639 - Coupon Launch Reminder Templates</description>
    <label>UK Coupon Launch Reminder Date</label>
    <type>DateTime</type>
</CustomField>