unpackaged/main/default/objects/Coupon_Seller__c/recordTypes/Manhattan_Coupon.recordType-meta.xml
<RecordType>
    <fullName>Manhattan_Coupon</fullName>
    <active>true</active>
    <label>Manhattan Coupon</label>
</RecordType>