unpackaged/main/default/objects/Coupon_Seller__c/recordTypes/Pop_Coupon.recordType-meta.xml
<RecordType>
    <fullName>Pop_Coupon</fullName>
    <active>true</active>
    <label>Pop Coupon Seller</label>
</RecordType>