unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Exclude_AU_from_Promotion_TC_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclude_AU_from_Promotion_TC_Validation</fullName>
    <active>true</active>
    <description>US-0006964:[AU] AU Coupon Validations - Exclude AU from Promotion T&amp; C Validation
US-0007287: Also UK</description>
    <errorConditionFormula>IF(
    AND(ISCHANGED(Coupon_Seller_Stage__c),
        OR(
       ISPICKVAL(Coupon__r.Contract_Language__c,&#39;AU&#39;),
            ISPICKVAL(Coupon__r.Contract_Language__c,&#39;UK&#39;)
        ),
       ISPICKVAL(Coupon_Seller_Stage__c,&#39;Contract Send&#39;),
        NOT(ISPICKVAL(PRIORVALUE(Coupon_Seller_Stage__c),&#39;Approved&#39;)),
        NOT($Setup.ActiveValidationRules__c.All_Validation_Rules_Deactivated__c)
    ),
true,
false)</errorConditionFormula>
    <errorDisplayField>Additional_Terms__c</errorDisplayField>
    <errorMessage>Coupon Contracts can only be sent when Contract stage equals to &quot;Approved&quot;</errorMessage>
</ValidationRule>