unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Prevent_Coupon_Seller_Creation_DE_Seller.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Coupon_Seller_Creation_DE_Seller</fullName>
    <active>false</active>
    <description>US-0011998 - Business Feedback Focus 75 AC2
US-0011728 - Modifications and missing features for NA Coupons tab
US-0012269 - Deactivate the VR until SEP Coupon launch</description>
    <errorConditionFormula>AND(ISNEW(),
   OR(
       ISPICKVAL(Seller__r.EBH_RevRollup__c, &#39;DE&#39;),
       ISPICKVAL(Seller__r.EBH_RevRollup__c, &#39;US&#39;)
   ),
   NOT(
     OR(ISPICKVAL(Seller__r.SP_Coupons__c, &#39;Full Access&#39;),
        ISPICKVAL(Seller__r.Seller_Portal_Group__r.SP_Coupons__c , &#39;Allowed&#39;)
     )
   )
)</errorConditionFormula>
    <errorMessage>This seller is not eligible to participate in Coupons. Please update their eligibility to Coupons in the Seller Portal and try again.</errorMessage>
</ValidationRule>