unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Prevent_Integration_User_CONTRACT_SEND.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Integration_User_CONTRACT_SEND</fullName>
    <active>true</active>
    <description>EPH-7919</description>
    <errorConditionFormula>IF( AND(ISCHANGED( Coupon_Seller_Stage__c ), ISPICKVAL(Coupon_Seller_Stage__c , &#39;Contract Send&#39;), OR(EBH_CouponSellerOwner__r.FirstName=&#39;Integration&#39;,EBH_CouponSellerOwner__r.FirstName=&#39;Deployment&#39;) 
		)
,true,false
)</errorConditionFormula>
    <errorMessage>You need to assign appropriate owner for the Coupon Seller record before sending out the coupon contract.</errorMessage>
</ValidationRule>