unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Prevent_Stage_Send_Approval_If_Not_US.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Stage_Send_Approval_If_Not_US</fullName>
    <active>true</active>
    <description>US-0011779 - Internal Coupon Seller Approval flow for NA</description>
    <errorConditionFormula>AND(ISCHANGED(Coupon_Seller_Stage__c),  ISPICKVAL(Coupon_Seller_Stage__c, &#39;Sent for Approval&#39;),Contract_Language__c != &#39;US&#39;)</errorConditionFormula>
    <errorMessage>This status can be selected for only US .</errorMessage>
</ValidationRule>