unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Prevent_User_Move_to_Previous_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_User_Move_to_Previous_Stage</fullName>
    <active>false</active>
    <description>US-0009781 - Coupon seller - validation rule after contract is signed</description>
    <errorConditionFormula>AND( OR( $Profile.Name = &#39;AU Standard User Profile&#39;,
         $Profile.Name = &#39;Standard User Profile&#39;
     ),
     $Profile.Name &lt;&gt; &#39;Business Admin&#39;,
     $Profile.Name &lt;&gt; &#39;System Administrator&#39;,
     NOT(ISBLANK(Contract_Accept_Date__c)),
     NOT(ISBLANK(Contract_Accepted_From__c)),
     AND( ISPICKVAL(PRIORVALUE(Coupon_Seller_Stage__c), &#39;Contract Signed&#39;),
          OR( ISPICKVAL(Coupon_Seller_Stage__c , &#39;Targeted&#39;),
              ISPICKVAL(Coupon_Seller_Stage__c , &#39;Reached&#39;),
              ISPICKVAL(Coupon_Seller_Stage__c , &#39;Commited&#39;),
              ISPICKVAL(Coupon_Seller_Stage__c , &#39;Contract Negotiation&#39;),
              ISPICKVAL(Coupon_Seller_Stage__c , &#39;Approved&#39;)
          ) 
     ) 
)</errorConditionFormula>
    <errorMessage>Seller has signed the contract you cannot move the stage back. Only declined stage is allowed.</errorMessage>
</ValidationRule>