unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Required_Ads_Amt_And_Spend_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Ads_Amt_And_Spend_Date</fullName>
    <active>true</active>
    <description>US-0015701 [AU] Coupon Seller Object - New fields for AU Budget Mgmt. and Contracts + Validation Rule</description>
    <errorConditionFormula>OR(AND( ISPICKVAL( Advertising_Promotion__c , &#39;Yes&#39;) , ISNULL( Advertising_Amount__c )),AND( ISPICKVAL( Advertising_Promotion__c , &#39;Yes&#39;) , ISNULL( Ad_Spend_Date__c )))</errorConditionFormula>
    <errorMessage>Advertising Amount and Ad Spend Date are required</errorMessage>
</ValidationRule>