unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Seller_Declined_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Seller_Declined_Reason_Required</fullName>
    <active>true</active>
    <description>[#EPH-7254]Object: Coupon Seller - New field Seller Declined Reason</description>
    <errorConditionFormula>IF( AND(ISPICKVAL(Coupon_Seller_Stage__c , &#39;Seller Declined&#39;),   ISPICKVAL(Seller_Declined_Reasons__c, &#39;&#39;)), true, false)</errorConditionFormula>
    <errorMessage>Seller Declined Reasons is required.</errorMessage>
</ValidationRule>