unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Tc_accepted_before_moving_to_ContSend.validationRule-meta.xml
<ValidationRule>
    <fullName>Tc_accepted_before_moving_to_ContSend</fullName>
    <active>false</active>
    <description>[#EPH-7596] Coupon Seller - Validation Rule if T/c accepted before moving to Contract Send
Deactivate on 2020-07-09 by
US-0007859 - Deactivate Validation Rule Coupon Seller: Tc_accepted_before_moving_to_ContSend</description>
    <errorConditionFormula>IF( OR(ISPICKVAL(Coupon__r.Contract_Language__c,&#39;UK&#39;),ISPICKVAL(Coupon__r.Contract_Language__c,&#39;AU&#39;)) ,false,
	IF(AND(ISPICKVAL(Coupon_Seller_Stage__c, &#39;Contract Send&#39;),Promotions_T_Cs_agreed__c != &#39;Accepted&#39;) , true , false)
 )</errorConditionFormula>
    <errorDisplayField>Additional_Terms__c</errorDisplayField>
    <errorMessage>Please ask your seller to accept the Promotional T&amp;Cs in Deals Portal before progressing with Coupon Contract send out</errorMessage>
</ValidationRule>