unpackaged/main/default/objects/Coupon_Seller__c/validationRules/US_Stage_TO_Contract_Send.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Stage_TO_Contract_Send</fullName>
    <active>true</active>
    <description>US-0011779</description>
    <errorConditionFormula>IF( AND(ISCHANGED( Coupon_Seller_Stage__c ),TEXT(PRIORVALUE(Coupon_Seller_Stage__c)) != &quot;Approved&quot;,ISPICKVAL(Coupon_Seller_Stage__c, &quot;Contract Send&quot;),Contract_Language__c = &#39;US&#39;,NOT(CONTAINS($Profile.Name, &#39;System&#39;))), true,false)</errorConditionFormula>
    <errorMessage>Please select Send for Approval before sending the contract to the Seller</errorMessage>
</ValidationRule>