unpackaged/main/default/objects/Coupon_Seller__c/validationRules/Validation_Coupon_Seller_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Coupon_Seller_Stage</fullName>
    <active>true</active>
    <description>US-0007262: POP COUPON - Coupon Seller - Stage Validation</description>
    <errorConditionFormula>IF(AND( RecordType.DeveloperName=&#39;Pop_Coupon&#39; ,!Pitch_Records_Available__c, !ISPICKVAL( Coupon_Seller_Stage__c , &#39;New&#39;) ), true, false)</errorConditionFormula>
    <errorMessage>You cannot progress until Co-invest records have been created. Note: Backend process requires about 24 hours to create Co-invest records after Coupon Seller record was created.</errorMessage>
</ValidationRule>